# augurpy

./: .buildinfo  .cookietemple.yml  .flake8  .pre-commit-config.yaml  Dockerfile  README.rst  authors.html  code_of_conduct.html  contributing.html  cookietemple.cfg  genindex.html  index.html  installation.html  noxfile.py  objects.inv  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  usage.html
.github/workflows/: build_package.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
augurpy/: calculate_AUC.py  cv.py  cv_scorer.py  debug_velocity_bhattacher_multi_astro  differential_prioritization.py  estimator.py  estimators.py  evaluate.py  read_load.py  running.py  scorer.py
augurpy/pl/: differential_prioritization.py  important_features.py  lollipop.py  scatterplot.py  umap.py
augurpy/plotting/: differential_prioritization.py  lollipop.py  scatterplot.py  umap.py
docs/: conf.py  usage.rst
docs/_autosummary/: augurpy.calculate_AUC.rst  augurpy.cv.rst  augurpy.estimator.rst  augurpy.estimators.rst  augurpy.evaluate.rst  augurpy.read_load.rst
docs/estimator/: augurpy.estimator.Params.rst
makefiles/: Linux.mk  Windows.mk
tests/: test_calculate_auc.py  test_cv.py  test_estimators.py  test_evaluate.py  test_load_read.py
tutorials/: Augurpy.ipynb
