[tool.poetry]
name = "augurpy"
version = "0.1.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "A Python adaption of Augur to prioritize cell types in perturbation analysis."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/theislab/augurpy"
repository = "https://github.com/theislab/augurpy"
documentation = "https://augurpy.readthedocs.io"
packages = [
    { include = "augurpy" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
click = ">=7.1.2"
rich = ">=10.16.1"
PyYAML = ">=6.0"
anndata = "^0.7.8"
scikit-learn = ">=1.0.1"
switchlang = ">=0.1.0"
scanpy = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.3"
coverage = {extras = ["toml"], version = "^6.2"}
safety = ">=1.9.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = ">=4.3.1"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.16.0"
flake8 = ">=4.0.1"
black = ">=21.12b0"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.11.29"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.5"
pep8-naming = ">=0.12.1"
reorder-python-imports = ">=2.5.0"
pre-commit-hooks = ">=4.0.1"
sphinx-rtd-theme = ">=1.0.0"
sphinx-click = "^3.0.0"
Pygments = ">=2.8.1"
types-pkg-resources = ">=0.1.2"
types-requests = ">=2.26.2"
types-attrs = ">=19.1.0"
sphinx-rtd-dark-mode = ">=1.2.4"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
pyupgrade = "^2.31.0"

[tool.poetry.scripts]
augurpy = "augurpy.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120

[tool.coverage.paths]
source = ["augurpy", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["augurpy"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
